--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,15 @@
-name: build aseprite
+name: Build and deploy Aseprite
 
 on:
-#   schedule:
-#     - cron: '0 0 * * *' # Runs every night
-  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
   push:
     branches:
       - master
 
 env:
-  BUILD_TYPE: RelWithDebInfo
-  ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-
+  BUILD_TYPE: Release
+  
 jobs:
   check-version:
     name: Check latest Aseprite release
@@ -42,6 +40,7 @@ jobs:
         key: cached_version
     - name: Should we start new build?
       id: should_build
+      if: steps.version_check.outputs.cache-hit != 'true'
       run: echo "::set-output name=should_build::true"
     - name: Create Release
       id: create_release
@@ -56,7 +55,7 @@ jobs:
           ${{ steps.version_info.outputs.version_info }}
         draft: true
         prerelease: false
-
+  
   build-aseprite:
     name: Build Aseprite
     needs: check-version
@@ -64,7 +63,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
        matrix:
-         os: [windows-latest, ubuntu-latest, macOS-latest]
+         os: [windows-latest]
        fail-fast: false    
     steps:
       - name: (Windows) Install dependencies
